[project]
name = "a-mem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.22",
    "litellm>=1.16.11",
    "nltk>=3.8.1",
    "numpy>=1.24.3",
    "openai>=1.3.7",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.3.2",
    "sentence-transformers>=2.2.2",
    "transformers>=4.36.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
